fixed z-index to be over tarrins

--- a/public/styles.css
+++ b/public/styles.css
@@ -757,7 +757,7 @@ hr {
 
 .reviewModalOutter {
   position: fixed;
-  z-index: 1;
+  z-index: 7;
   left: 0;
   top: 0;
   width: 100%;
